# newxim

./: .gitmodules  CMakeLists.txt
src/: Main.cpp
src/Configuration/: Configuration.cpp  Configuration.hpp  Factory.cpp  Factory.hpp  RoutingTable.cpp  RoutingTable.hpp
src/Configuration/Graph/: CirculantGraph.cpp  CirculantGraph.hpp  Graph.cpp  Graph.hpp  MeshGraph.cpp  MeshGraph.hpp  TorusGraph.cpp  TorusGraph.hpp  TreeGraph.cpp  TreeGraph.hpp
src/Configuration/TrafficManagers/: HotspotTrafficManager.cpp  HotspotTrafficManager.hpp  RandomTrafficManager.cpp  RandomTrafficManager.hpp  TableTrafficManager.cpp  TableTrafficManager.hpp  TrafficManager.hpp
src/Data/: Flit.cpp  Flit.hpp  FlitType.hpp  Packet.hpp
src/Hardware/: Buffer.cpp  Buffer.hpp  Connection.hpp  Network.cpp  Network.hpp  Processor.cpp  Processor.hpp  ProcessorQueue.cpp  ProcessorQueue.hpp  Relay.cpp  Relay.hpp  ReservationTable.cpp  ReservationTable.hpp  Router.cpp  Router.hpp  SimulationTimer.cpp  SimulationTimer.hpp  Tile.hpp
src/Metrics/: FlitTracer.cpp  FlitTracer.hpp  GlobalStats.cpp  GlobalStats.hpp  ProgressBar.cpp  ProgressBar.hpp  Stats.cpp  Stats.hpp
src/Routing/: RoutingAlgorithm.hpp  RoutingBypass.hpp  RoutingFitSubnetwork.hpp  RoutingFitVirtualSubnetwork.hpp  RoutingFixedSubnetwork.hpp  RoutingMeshAlgorithm.hpp  RoutingMeshNegativeFirst.hpp  RoutingMeshNorthLast.hpp  RoutingMeshO1TURN.hpp  RoutingMeshOddEven.hpp  RoutingMeshWestFirst.hpp  RoutingMeshXY.hpp  RoutingMeshXYYX.hpp  RoutingSubnetwork.hpp  RoutingTableBased.hpp  RoutingTorusAlgorithm.hpp  RoutingTorusCLUE.hpp  RoutingVirtualSubnetwork.hpp
src/Selection/: SelectionBufferLevel.hpp  SelectionCirculantRingSplit.hpp  SelectionCirculantVirtualDistribution.hpp  SelectionCirculantVirtualRingSplit.hpp  SelectionKeepSpace.hpp  SelectionRandom.hpp  SelectionRandomKeepSpace.hpp  SelectionStrategy.hpp
